--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "moment": "^2.29.1",
+    "vconsole": "^3.15.1",
     "view-design": "^4.5.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
